Bytter til ny ftp-server (#58)
* Refaktoreringer

* Logger hver loggestatement bare en gang

* Flere refaktoreringer

* Bruker ny ftp-server

* Sender med privatnøkkel fra vault ved pålogging til ftp

* Bytter til enklest mulig ftpleser